# til

./: .gitignore  LICENSE  README.md  geekcode.sig
AtCorder/: FT_robot.nim  VV  VV.nim  already2018  already2018.nim  always_big  always_big.nim  compare_sum.nim  good_sequence.nim  kagamimochi  kagamimochi.nim  katana.nim  newYear  newYear.nim  otoshi2  otoshi2.nim  otoshidama.nim  postalCode  postalCode.nim  program_rate  program_rate.nim  program_rate2  program_rate2.nim  roundUp  roundUp.nim  salary_atCorder  salary_atCorder.nim  snow  snow.nim  specialTrains.nim  tramp  tramp.nim  twoAnagrams_proc  twoAnagrams_proc.nim  wana  wana.nim  welcome2atcoder  welcome2atcoder.nim
Common_Lisp/: command_line_params.lisp  echo.ros  foo.lisp  if.lisp  setq.lisp  web.lisp
Lua/: fibonacci.lua  file.lua  fizzbuzz.lua  fizzbuzz3.lua  func_hello.lua  hello_world.lua  less_than_more.lua  luac.out  odd_even.lua  repeat.lua  simple_while.lua  true-tonumber.lua  var.lua
Nim/: arguments.nim  base64_sample.nim  calicurater.nim  checksumSum.nim  color.nim  compile.nim  db_query.nim  db_query_sqlite  exit.nim  fibonacci.nim  file_operate.nim  filter.nim  fizzbuzz.nim  flashing_stdout.nim  getCursorP.nim  input_odd_even.nim  kitchen_timer.nim  localhost  operators.nim  opt.nim  path_name.nim  prime.nim  quickrun.nim  random_sample.nim  round.nim  sample_file_operate.txt  sort.nim  sosyage_timer.nim  sqlite_test.db  stringToSeq.nim  t1.nim  test.nim  type_case.nim  (+2 more)
others/rust/api-server-example/: Cargo.toml
others/rust/api-server-example/src/models/: user.rs
rust/axum-server-example/: Cargo.toml  Makefile.toml
rust/axum-server-example/src/: main.rs
rust/bonsaidb-example/: .gitignore  Cargo.toml
rust/bonsaidb-example/src/: collections.rs  main.rs
rust/bonsaidb-example/src/collections/: book.rs  message.rs
rust/mongodb-example/: .env  Cargo.toml  docker-compose.yml
rust/mongodb-example/src/: main.rs  mongo_client.rs
rust/mongodb-example/src/collections/: book.rs
rust/voicevox_example/: Cargo.toml  Makefile.toml
rust/voicevox_example/src/: main.rs  play_audio.rs
rust/voicevox_example/voicevox_api/: Cargo.toml
rust/voicevox_example/voicevox_api/src/: lib.rs  query.rs  synthesis.rs
(+2766 files in other folders)
