[package]
name = "axum-server-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["serde", "v4"] }