[package]
name = "mongodb-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
mongodb = "2.5.0"
tokio = { version = "1.28.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"