[package]
name = "voicevox_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
rodio = "0.17.1"
reqwest = { version = "0.11", features = ["json"] }
bytes = { version = "1", features = ["serde"] }

voicevox_api = { path = "./voicevox_api" }
